--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portifolioreact",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "homepage": "Portifolio/ ",
   "type": "module",
   "scripts": {
     "dev": "vite",
