--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portifolioreact",
   "private": true,
   "version": "0.1.0",
-  "homepage": "components/ ",
+  "homepage": "https://f3lipedaniel.github.io/Portifolio/ ",
   "type": "module",
   "scripts": {
     "dev": "vite",
